--- a/welcomeMessageInDirectline.html
+++ b/welcomeMessageInDirectline.html
@@ -38,7 +38,7 @@
 
             window.WebChat.renderWebChat({
                 directLine: window.WebChat.createDirectLine({ secret: 'Directline-secret' }),
-                userID: 'USER_ID',
+                //userID: 'USER_ID',
                 store
             }, document.getElementById('webchat'));
 
